Add index pages for ptahtinder and make the structure of the pages of pathfinder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Github page</title>
+</head>
+
+<body>
+<a href="pathfinder/index.xml">Pathfinder RPG</a>
+</body>
+
+</html> 
