--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
 <a href="pathfinder/index.xml">Pathfinder RPG</a>
+<br />
+<a href="pathfinder/charactor sheet/table.xhtml">Pathfinder RPG Charactor sheet</a>
 </body>
 
 </html> 
