Add new character sheet maker for TRPG

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Github page</title>
+  <title>Github page</title>
 </head>
-
 <body>
-<a href="pathfinder/index.xml">Pathfinder RPG</a>
-<br />
-<a href="pathfinder/charactor sheet/table.xhtml">Pathfinder RPG Charactor sheet</a>
+  <a href="pathfinder/index.xml">Pathfinder RPG</a>
+  <br />
+  <a href="pathfinder/charactor sheet/table.xhtml">Pathfinder RPG Charactor Sheet</a>
+  <br />
+  <a href="trpg/charSheetMaker.html">TRPG Charactor Sheet Maker</a>
 </body>
-
 </html> 
