- Modify sheet maker to render on shadow DOM - Update CSS files - Update home page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="w3pro.css" />
+  <link rel="stylesheet" href="w3-theme-grey.css" />
   <title>Github page</title>
 </head>
 <body>
-  <a href="pathfinder/index.xml">Pathfinder RPG</a>
-  <br />
-  <a href="pathfinder/charactor sheet/table.xhtml">Pathfinder RPG Charactor Sheet</a>
-  <br />
-  <a href="trpg/charSheetMaker.html">TRPG Charactor Sheet Maker</a>
+  <div class="w3-container">
+    <h2>Pages</h2>
+    <div class="w3-bar-block">
+      <a href="pathfinder/index.xml" class="w3-bar-item w3-button">Pathfinder RPG</a>
+      <a href="pathfinder/charactor sheet/table.xhtml" class="w3-bar-item w3-button">Pathfinder RPG Charactor Sheet</a>
+      <a href="trpg/charSheetMaker.html" class="w3-bar-item w3-button">TRPG Charactor Sheet Maker</a>
+    </div>
+  </div>
 </body>
-</html> 
+</html>
