--- a/pathfinder/charactor sheet/table.xhtml
+++ b/pathfinder/charactor sheet/table.xhtml
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="zh-tw" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>角色表</title>
 	<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/w3css/4/w3pro.css" />
 	<link rel="stylesheet" type="text/css" href="https://www.w3schools.com/lib/w3-theme-grey.css" />
